[project]
name = "fotohost"
version = "0.1.0"
description = ""
authors = [
    {name = "oskalis",email = "oskalis@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
