[project]
name = "fotohost"
version = "0.1.0"
description = ""
authors = [
    {name = "oskalis",email = "oskalis@yandex.ru"}
]
requires-python = ">=3.13, <3.14.1"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.6,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "transformers (>=5.5.4,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
